<resources>
    <string name="app_name" formatted="false">REAP</string>
    <string name="check_license">Check license</string>
    <string name="checking_license">Checking license...</string>
    <string name="dont_allow">Don\'t allow the user access</string>
    <string name="allow">Allow the user access</string>
    <string name="application_error">Application error: %1$s</string>
    <string name="unlicensed_dialog_title">Licensing Error</string>
    <string name="unlicensed_dialog_body">The licensing server indicated 
        that this app has not been licensed for the account on this device.
        \n\n
        One thing to check is the account name in the Accounts and
        Sync for this device\'s settings.  It must be the same as the account
        used to purchase the app.
        \n\n 
        This may be an error, and if so please notify the developer to 
        quickly fix the problem.  However, If this app has actually not
        been purchased, please consider purchasing it from Google Play.</string>
      <string name="failed_retry_dialog_body">An error occurred 
      attempting to connect to the licensing server.  If your network connection is
      weak, try starting the app again when the connection is better.  The licensing
      service is provided through Google Play, so that must be installed.  The exact
      error (which caused this message) is that your device tried to determine 
      several times if this is a licensed
      app, was unsuccessful, and eventually gave up.
      
       </string>
    <string name="buy_button">Buy app</string>
    <string name="quit_button">Exit</string>
    <string name="netPresentValueTabText" formatted="false">NPV</string>
    <string name="atcfTabText" formatted="false">ATCF</string>
    <string name="aterTabText" formatted="false">ATER</string>
    <string name="modifiedInternalRateOfReturnTabText" formatted="false">MIRR</string>
    <string name="capRateOnPurchaseValueTabText" formatted="false">CRPV</string>
    <string name="capRateOnProjectedValueTabText" formatted="false">CRCV</string>
    <string name="configureGraphMenuTitle" formatted="false">Configure Graph Page</string>
    <string name="savedLocationsMenuTitle" formatted="false">Saved Locations</string>
    <string name="editValuesMenuTitle" formatted="false">Edit Data Values</string>
    <string name="saveCurrentValuesMenuTitle" formatted="false">Save Current</string>
    <string name="viewGraphMenuTitle" formatted="false">View Graph</string>
    <string name="infoMenuTitle" formatted="false">Info</string>
    <string name="sortByMenuTitle" formatted="false">Sorting</string>
  	 <string name="monthlyAmountOwedHelpText">This is the amount owed (based on the loan) at the end of the
  	     month in question</string>
 	 <string name="monthlyAmountOwedTitleText">Monthly Amount Owed</string>
    <string name="monthlyInterestAccumulatedHelpText">This amount is the interest that is accumulated at
        the end of the month in question</string>
    <string name="monthlyInterestAccumulatedTitleText">Monthly Interest Accumulated</string>
  	<string name="principalPaymentHelpText">This is the monthly principal payment for the
  	    month number in question</string>
  	<string name="principalPaymentTitleText">Calculated Principal Payment</string>
  	<string name="firstDayCostsHelpText">These are the costs that are incurred
  	    on the first day (figuratively, but close) of ownership.  Specifically,
  	    they are the sum of the down payment, the fix-up costs, and the closing costs.
  	    </string>
  	<string name="firstDayCostsTitleText">Calculated First Day Costs</string>
  	<string name="loanAmountHelpText">The loan amount is calculated by
  	    simply subtracting the Down Payment from the Total Purchase Value</string>
  	<string name="loanAmountTitleText">Calculated Loan Amount</string>
  	 <string name="interestPaymentHelpText">The individual interest payment</string>
  	<string name="interestPaymentTitleText">Calculated Interest Payment</string>
  	<string name="helpButtonContentDescription" formatted="false">Help button</string>
    <string name="accumulatedInterestPaidTitleText" formatted="false">Calculated Interest 
      Paid Accumulator</string>
    <string name="accumulatedInterestPaidHelpText" formatted="false">The 
      accumulated interest paid to date.
	    \n
	    \n
      \nIn an amortized loan, each monthly mortgage payment has a portion 
      which applies
      to paying down the amount owed versus a portion which is headed for 
      the pocket of the lender.
      The amount listed here is that total accumulated amount which has 
      gone to the lender, to date.
	      \n\n
	        This is a calculated value</string>
    <string name="atcfTitleText" formatted="false">Calculated Yearly ATCF</string>
    <string name="atcfHelpText" formatted="false">The amount of money 
      that goes into your bank at the end of the year.
	    \n
	    \n
      After Tax Cash Flow equates to the Before Tax Cash Flow minus
      the calculated income tax.  The income
      tax is determined by multiplying the Marginal Tax Rate by the
      Taxable Income
	    \n\n
	      This is a calculated value</string>
      <string name="atcfAccumulatorTitleText" formatted="false">Calculated ATCF
           Accumulator</string>
      <string name="atcfAccumulatorHelpText" formatted="false">This 
        value is the accumulating after tax cash flow to date
	    \n
	    \n
      This is the amount of money which has accrued, starting at 
      the first day of ownership, and ending
	    on the last day of the currently selected year.
	    \n\n
	      This is a calculated value</string>
    <string name="atcfNetPresentValueTitleText" formatted="false">Calculated ATCF NPV</string>
    <string name="atcfNetPresentValueHelpText" formatted="false">Each 
      yearly After Tax Cash Flow is 
	    brought into present value dollars and added up to give this value.
	    \n
	    \n
      This is the summation of the present values of after tax
      cash flows to date.  Present value
      is calculated by dividing the After Tax Cash Flow 
      by (1 + discount rate)^number of years.
      For example,
      the last month\'s equation would be (1 + discount rate)^30
	    for a 30 year mortgage.
	    \n\n
	    Assumption: For simplicity\'s sake, all present value calculations are
	    done on a yearly basis.  All income and outlay for the year is 
	    summed and then the present value equation is run on it.
	    \n\n
	      This is a calculated value</string>
    <string name="aterTitleText" formatted="false">Calculated ATER</string>
    <string name="aterHelpText" formatted="false">Amount received
      from sale of house, minus broker fees and inflation-adjusted 
	    miscellaneous fees.   The sale amount is based on the projected
	    value of the investment, which is calculated by taking
	    the purchase price of the house, plus fix-up costs (We assume it
	    increase value commensurately), and multiplying that by (1 + REAR)^Years
	    \n\n
	    Assumption: the ATER shown for each year is meant to represent
	    what the investor would expect to receive if they sold the property
	    that year.  For example, the ATER for year 3 indicates the equity
	    reversion of a property which has been owned for 3 years and sold
	    before the mortgage was fully paid.  
	    \n\n
	     This is a calculated value</string>
    <string name="aterPresentValueTitleText" formatted="false">Calculated ATER PV</string>
    <string name="aterPresentValueHelpText" formatted="false">This is 
      the after tax equity reversion in present value dollars.  
	    \n\n
	      This is a calculated value</string>
    <string name="brokerCutTitleText" formatted="false">Calculated Broker Cut at Sale</string>
    <string name="brokerCutHelpText" formatted="false">This is the 
      amount the broker receives at the time when you sell the investment,
	     based on the percentage set. 
	     \n\n
	       This is a calculated value</string>
       <string name="buildingValueHelpText" formatted="false">The value
         of the building itself, not the total estate (which includes land). This value
         is used to calculate the depreciation which will be applied to each year\'s
         taxes and to the taxes at the equity reversion (investment liquidation)
	    \n\n
	    This value is user-input</string>
    <string name="capRateOnPurchaseValueHelpText" formatted="false">This
      is the capitalization rate based on the original purchase value of the investment.
	    The equation is Net Operating Income (NOI) / original purchase value.
	    \n\n
	    The equation is meant to give an idea of value of the investment.  It also
	    provides an indication of what portion of the purchase value is paid
	    off each year.  For example, a capitalization rate of 10% means that
	    10% of the value of the investment is paid off by the income on the 
	    investment each year.
	    \n\n
	    It can also provide valuation of an investment.  For instance, if one expects
	    typical cap rates to be 10% in an area, then a property that provides $100,000
	    a year should cost $1,000,000
	    \n\n
	       This is a calculated value</string>
    <string name="capRateOnPurchaseValueTitleText" formatted="false">Calculated Cap 
      Rate (Purchase Value)</string>
    <string name="capRateOnProjectedValueHelpText" formatted="false">This is
      the cap rate based on the current estimated value of the investment.
	    The equation is Net Operating Income (NOI) / current value.  This
	    value is very similar to Cap Rate (Purchase Value), except that instead
	    of relating to the valuation of the investment at purchase time, it is
	    related to the projected current value, and is therefore considered a 
	    more accurate valuation.
	    \n\n
	       This is a calculated value</string>
    <string name="capRateOnProjectedValueTitleText" formatted="false">Calculated Cap Rate (Current Value)</string>
    <string name="cityHelpText" formatted="false">City of Investment</string>
    <string name="closingCostsHelpText" formatted="false">Costs incurred at
      the time of purchase of investment, 
      such as surveyor fees, home inspection, title insurance, termite bond, 
      and any 
	    other miscellaneous fees *other* than the amount owed to the broker at the time of purchase
	    \n\n
	    This value is user-input</string>
    <string name="currentAmountOutstandingHelpText" formatted="false">The amount
      of principal left to pay off on the loan</string>
    <string name="currentAmountOutstandingTitleText" formatted="false">Calculated Loan Amount 
      Outstanding</string>
    <string name="downPaymentHelpText" formatted="false">The amount of 
      money given by the investor towards the purchase price of the investment
	    \n\n
	    This value is user-input</string>
    <string name="yearValueText" formatted="false">Year: </string>
    <string name="dataRowLoadValuesString" formatted="false">Id: </string>
    <string name="streetAddressLoadValuesString" formatted="false">Addr: </string>
    <string name="totalPurchaseValueLoadValuesString" formatted="false">Value: </string>
    <string name="yearlyInflationRateLoadValuesString" formatted="false">infl-rate: </string>
    <string name="yearlyInterestRateLoadValuesString" formatted="false">int-rate: </string>
    <string name="downPaymentLoadValuesString" formatted="false">Down P.: </string>
    <string name="reqRateReturnLoadValuesString" formatted="false">RRR: </string>
    <string name="estimatedRentLoadValuesString" formatted="false">rent: </string>
    <string name="dateStampString" formatted="false">Modified: </string>
    <string name="rearLoadValuesString" formatted="false">REAR: </string>
</resources>