<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="10dip" >

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" 
            android:background="@color/gray95"
            >

            <TableRow  >

                <TextView
                    android:id="@+id/databaseItemTextViewLabel1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/streetAddressLoadValuesString"
                    android:textColor="@color/tf_green2"
                    android:textSize="10dip" />

                <TextView
                    android:id="@+id/streetAddressLoadValuesTextView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:paddingLeft="5dip"
                    android:paddingRight="5dip"
                    android:text="val"
                    android:textSize="12dip" />
            </TableRow>
        </TableLayout>

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1,3"
             >

            <TableRow android:background="@color/gray90" >

                <TextView
                    android:id="@+id/databaseItemTextViewLabel0"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dataRowLoadValuesString"
                    android:textColor="@color/tf_green2" />

                <TextView
                    android:id="@+id/dataRowLoadValuesTextView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:paddingLeft="5dip"
                    android:paddingRight="5dip"
                    android:text="val"
                    android:textSize="12dip" />

                <TextView
                    android:id="@+id/databaseItemTextViewLabel10"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rearLoadValuesString"
                    android:textColor="@color/tf_green2"
                    android:textSize="10dip" />

                <TextView
                    android:id="@+id/rearLoadValuesTextView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:paddingLeft="5dip"
                    android:paddingRight="5dip"
                    android:text="val"
                    android:textSize="12dip" />

   
            </TableRow>

            <TableRow android:background="@color/gray95" >

                             <TextView
                    android:id="@+id/databaseItemTextViewLabel11"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reqRateReturnLoadValuesString"
                    android:textColor="@color/tf_green2"
                    android:textSize="10dip" />

                <TextView
                    android:id="@+id/rrrLoadValuesTextView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:paddingLeft="5dip"
                    android:paddingRight="5dip"
                    android:text="val"
                    android:textSize="12dip" />
                
                <TextView
                    android:id="@+id/databaseItemTextViewLabel8"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/yearValueText"
                    android:textColor="@color/tf_green2"
                    android:textSize="10dip" />

                <TextView
                    android:id="@+id/yearLoadValuesTextView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:paddingLeft="5dip"
                    android:paddingRight="5dip"
                    android:text="val"
                    android:textSize="12dip" />

            </TableRow>

            <TableRow android:background="@color/gray90" >

                
                <TextView
                    android:id="@+id/databaseItemTextViewLabel4"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/yearlyInterestRateLoadValuesString"
                    android:textColor="@color/tf_green2"
                    android:textSize="10dip" />

                <TextView
                    android:id="@+id/yearlyInterestRateLoadValuesTextView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:paddingLeft="5dip"
                    android:paddingRight="5dip"
                    android:text="val"
                    android:textSize="12dip" />

                <TextView
                    android:id="@+id/databaseItemTextViewLabel9"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/yearlyInflationRateLoadValuesString"
                    android:textColor="@color/tf_green2"
                    android:textSize="10dip" />

                <TextView
                    android:id="@+id/inflationRateLoadValuesTextView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:paddingLeft="5dip"
                    android:paddingRight="5dip"
                    android:text="val"
                    android:textSize="12dip" />
                
            </TableRow>

            <TableRow android:background="@color/gray95" >

                
                <TextView
                    android:id="@+id/databaseItemTextViewLabel3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/totalPurchaseValueLoadValuesString"
                    android:textColor="@color/tf_green2"
                    android:textSize="10dip" />

                <TextView
                    android:id="@+id/totalPurchaseLoadValuesTextView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:paddingLeft="5dip"
                    android:paddingRight="5dip"
                    android:text="val"
                    android:textSize="12dip" />

                <TextView
                    android:id="@+id/databaseItemTextViewLabel7"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/estimatedRentLoadValuesString"
                    android:textColor="@color/tf_green2"
                    android:textSize="10dip" />

                <TextView
                    android:id="@+id/estimatedRentLoadValuesTextView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:paddingLeft="5dip"
                    android:paddingRight="5dip"
                    android:text="val"
                    android:textSize="12dip" />

            </TableRow>

            <TableRow android:background="@color/gray90" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/aterTabText"
                    android:textColor="@color/tf_green2"
                    android:textSize="10dip" />

                <TextView
                    android:id="@+id/aterLoadValuesTextView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:paddingLeft="5dip"
                    android:paddingRight="5dip"
                    android:text="val"
                    android:textSize="12dip" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/capRateOnProjectedValueTabText"
                    android:textColor="@color/tf_green2"
                    android:textSize="10dip" />

                <TextView
                    android:id="@+id/crcvLoadValuesTextView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:paddingLeft="5dip"
                    android:paddingRight="5dip"
                    android:text="val"
                    android:textSize="12dip" />

            </TableRow>
            
            <TableRow android:background="@color/gray95">
                
                
                <TextView
                    android:id="@+id/databaseItemTextViewLabel5"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/downPaymentLoadValuesString"
                    android:textColor="@color/tf_green2"
                    android:textSize="10dip" />

                <TextView
                    android:id="@+id/downPaymentLoadValuesTextView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:paddingLeft="5dip"
                    android:paddingRight="5dip"
                    android:text="val"
                    android:textSize="12dip" />
                
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/modifiedInternalRateOfReturnTabText"
                    android:textColor="@color/tf_green2"
                    android:textSize="10dip" />

                <TextView
                    android:id="@+id/mirrLoadValuesTextView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:paddingLeft="5dip"
                    android:paddingRight="5dip"
                    android:text="val"
                    android:textSize="12dip" />

                
                
            </TableRow>
            
            <TableRow android:background="@color/gray90" >
                
                
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/netPresentValueTabText"
                    android:textColor="@color/tf_green2"
                    android:textSize="10dip" />

                <TextView
                    android:id="@+id/npvLoadValuesTextView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:paddingLeft="5dip"
                    android:paddingRight="5dip"
                    android:text="val"
                    android:textSize="12dip" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/atcfTabText"
                    android:textColor="@color/tf_green2"
                    android:textSize="10dip" />

                <TextView
                    android:id="@+id/atcfLoadValuesTextView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:paddingLeft="5dip"
                    android:paddingRight="5dip"
                    android:text="val"
                    android:textSize="12dip" />
                
                
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/databaseItemTextView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dateStampString"
                android:textColor="@color/tf_green2"
                android:textSize="10dip" />

            <TextView
                android:id="@+id/modifiedTimeStampTextView"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="10dip"
                android:text="val"
                android:textSize="12dip" />
        </LinearLayout>

        <TextView
            android:id="@+id/commentsLoadValuesTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="No comments"
            android:textSize="12dip" />
    </LinearLayout>
